--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                 click to view
             </button>
         </div>
+
         <div class="card p-3 m-3 mb-5 shadow col-lg-3 col-md-5">
             <img src="images/cover_logo.png" class="img-fluid mb-3">
             <h3><strong>Infographics and Logos</strong></h3>
@@ -257,7 +258,8 @@
                 click to view
             </button>
         </div>
-        <div class="card p-3 m-3 mb-5 shadow col-lg-3 col-md-5">
+        
+        <div class="card p-3 m-3 mb-5 shadow col-lg-3 col-md-5 ">
             <img src="images/cover_digital.jpg" class="img-fluid mb-3" />
             <h3><strong>Digital Illustration</strong></h3>
             <p class="font-weight-light">
@@ -286,34 +288,36 @@
             <h2>Contact</h2>
         </div>
     </div>
-    <div class="card col-lg-8 col-md-10 col-sm-11 p-5 m-5">
-        <h3><strong>Interested in working with me?</strong></h3>
-        <p class="font-italic">Let's chat...</p>
-        <form action="https://formspree.io/xwkrgqno" method="POST">
-            <div class="row">
-                <div class="col-6 mb-4">
-                    <input type="text" class="form-control" id="firstNameInput" name="firstNameInput" placeholder="FirstName " required>
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="card col-lg-8 col-md-10 col-sm-10 p-5 mt-5 mb-5 shadow">
+            <h3><strong>Interested in working with me?</strong></h3>
+            <p class="font-italic">Let's chat...</p>
+            <form action="https://formspree.io/xwkrgqno" method="POST">
+                <div class="row">
+                    <div class="col-6 mb-4">
+                        <input type="text" class="form-control" id="firstNameInput" name="firstNameInput" placeholder="FirstName" required>
+                    </div>
+                    <div class="col-6 mb-4">
+                        <input type="text" class="form-control" id="lastNameInput" name="lastNameInput" placeholder="LastName" required>
+                    </div>
                 </div>
-                <div class="col-6 mb-4">
-                    <input type="text" class="form-control" id="lastNameInput" name="lastNameInput" placeholder="LastName" required>
+                <div class="row">
+                    <div class="col-12 mb-4">
+                        <input type="email" class="form-control" id="emailInput" name="emailInput" placeholder="email@email.com" required>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 mb-4">
-                    <input type="email" class="form-control" id="emailInput" name="emailInput" placeholder="youremail@email.com" required>
+                <div class="row">
+                    <div class="col-12 mb-4">
+                        <textarea type="text" class="form-control" id="messageInput" name="messageInput" placeholder="What would you like to work on next?" rows="5" required></textarea>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 mb-4">
-                    <textarea type="text" class="form-control" id="messageInput" name="messageInput" placeholder="What would you like to work on next?" rows="5" required></textarea>
-                </div>
-            </div>
-            <button class="btn btn-light font-italic col-4" type="submit">
-                submit
-            </button>
-        </form>
+                <button class="btn btn-light font-italic col-4" type="submit">
+                    submit
+                </button>
+            </form>
+        </div>
     </div>
-
 
 
 
