--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <div class="row">
         <div class="col-1"></div>
-        <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+        <div class="card p-3 m-3 shadow col-lg-3 col-md-5 col-sm-10 ml-lg-3 ml-sm-5">
             <img src="images/cover_internship.png" class="img-fluid mb-3">
             <h3><strong>Internship - CEM</strong></h3>
             <p class="font-weight-light">
@@ -186,7 +186,7 @@
             </button>
         </div>
 
-        <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+        <div class="card p-3 m-3 shadow col-lg-3 col-md-5 col-sm-10 ml-lg-3 ml-sm-5">
             <img src="images/cover_calaveras.png" class="img-fluid mb-3">
             <h3><strong>Calaveras Big Trees</strong></h3>
             <p class="font-weight-light">
@@ -202,7 +202,7 @@
             </button>
         </div>
 
-        <div class="card p-3 m-3 shadow col-lg-3 col-md-5">
+        <div class="card p-3 m-3 shadow col-lg-3 col-md-5 col-sm-10 ml-lg-3 ml-sm-5">
             <img src="images/cover_train.png" class="img-fluid mb-3" />
             <h3><strong>Purdue Reamer Club</strong></h3>
             <p class="font-weight-light">
@@ -228,7 +228,7 @@
 
     <div class="row">
         <div class="col-1"></div>
-        <div class="card p-3 m-3 mb-5 shadow col-lg-3 col-md-5">
+        <div class="card p-3 m-3 mb-5 shadow col-lg-3 col-sm-10 ml-lg-3 ml-sm-5">
             <img src="images/cover_corec.jpg" class="img-fluid mb-3">
             <h3><strong>Purdue University CoRec</strong></h3>
             <p class="font-weight-light">
@@ -244,7 +244,7 @@
             </button>
         </div>
 
-        <div class="card p-3 m-3 mb-5 shadow col-lg-3 col-md-5">
+        <div class="card p-3 m-3 mb-5 shadow col-lg-3  col-sm-10 ml-lg-3 ml-sm-5">
             <img src="images/cover_logo.png" class="img-fluid mb-3">
             <h3><strong>Infographics and Logos</strong></h3>
             <p class="font-weight-light">
@@ -259,7 +259,7 @@
             </button>
         </div>
         
-        <div class="card p-3 m-3 mb-5 shadow col-lg-3 col-md-5 ">
+        <div class="card p-3 m-3 mb-5 shadow col-lg-3  col-sm-10 ml-lg-3 ml-sm-5">
             <img src="images/cover_digital.jpg" class="img-fluid mb-3" />
             <h3><strong>Digital Illustration</strong></h3>
             <p class="font-weight-light">
