--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <img src="images\Seattleimg.jpg" class="img-fluid shadow ml-5" />
         </div>
         <div class="col-lg-5 col-md-8 col-sm-10 mt-5 ml-5">
-            <img src="images\painttext.png" class="img-fluid" />
+            <img src="images\paintText.png" class="img-fluid" />
         </div>
     </div>
 
