--- a/index.html
+++ b/index.html
@@ -106,11 +106,13 @@
         <div class="col-lg-5 col-sm-9 mt-4">
             <h3>Hello, My name is Allie Knepp</h3>
             <h4 class="p-4">
-                I am a senior studying Web Programming & Design. I have a passion for creating fun and functional websites. I enjoy the creativity of front end development and the challenge of back end.
-
-                On my most recent project I got to advance my knowledge in C# and SQL. I created a new system that allowed university advisors to edit and view student internship information.
-
-                I hope you enjoy exploring my work
+                As a senior studying Web Programming & Design, I have a passion for creating fun and functional websites. I enjoy the creativity of 
+                front end development and the challenge of back end.
+                <br /><br />
+                On my most recent project I gadvanced my knowledge in C# and SQL. I developed a new system that allowed university advisors to edit 
+                and view student internship information.
+                <br /><br />
+                I hope you enjoy exploring my work!
 
             </h4>
             <h4>
