--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                 As a senior studying Web Programming & Design, I have a passion for creating fun and functional websites. I enjoy the creativity of 
                 front end development and the challenge of back end.
                 <br /><br />
-                On my most recent project I gadvanced my knowledge in C# and SQL. I developed a new system that allowed university advisors to edit 
+                On my most recent project I advanced my knowledge in C# and SQL. I developed a new system that allowed university advisors to edit 
                 and view student internship information.
-                <br /><br />
+                <br /><br /> 
                 I hope you enjoy exploring my work!
 
             </h4>
@@ -268,7 +268,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-1"></div>
+        <div class="col-lg-2 col-md-1"></div>
         <div class="card col-lg-8 col-md-10 col-sm-10 p-5 mt-5 mb-5 shadow">
             <h3><strong>Interested in working with me?</strong></h3>
             <p class="font-italic">Let's chat...</p>
